Fix concurrency issues
Signed-off-by: Kristiyan Selveliev <kristiyan.selveliev@limechain.tech>